plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.107'
    alias libs.plugins.machete // automatic jar compressing on build
    alias libs.plugins.shadow
}

version = mod_version
group = maven_group

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.20.5+, so your mod should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

apply from: "$rootDir/gradle/scripts/neogradle.gradle"
apply from: "$rootDir/gradle/scripts/capabilities.gradle"
apply from: "$rootDir/gradle/scripts/repositories.gradle"
apply from: "$rootDir/gradle/scripts/dependencies.gradle"
apply from: "$rootDir/gradle/scripts/resources.gradle"
apply from: "$rootDir/gradle/scripts/jars.gradle"
apply from: "$rootDir/gradle/scripts/publishing.gradle"

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

machete {
    // disable machete locally for faster builds
    enabled = false
}
